# rocket-template-frontend

./: Cargo.toml  save_test.txt  test_01.txt  test_02.txt
src/: main.rs  page.rs  routes.rs
templates/: blank.html.tera  edit.html.tera  index.html.tera  success.html.tera  view.html.tera
