[package]
name = "rocket_prac02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.10"
rocket_contrib = {version = "*", features = ["tera_templates"]}
serde = {version = "*", features = ["derive"]}